FEAT: Unit test support for PageLinks.java file and monitoring coverage using jacoco and sonar